fix: slider overflow

--- a/src/components/presentational/SliderBanner/SliderBanner.module.scss
+++ b/src/components/presentational/SliderBanner/SliderBanner.module.scss
@@ -1,6 +1,7 @@
 .slider {
   display: block;
   height: fit-content;
+  overflow: hidden;
     position: relative;
     width: 100%;
     height: auto;
